vlib/v/checker/tests/import_mod_as_import_alias_duplicate_err.out
vlib/v/checker/tests/import_mod_as_import_alias_duplicate_err.vv:1:1: warning: module `json` has been deprecated; `json` will be removed soon; use the pure V `json2` module instead
    1 | import json
      | ~~~~~~~~~~~
    2 | import x.json2 as json
    3 |
vlib/v/checker/tests/import_mod_as_import_alias_duplicate_err.vv:2:8: error: A module `json` was already imported on line 1`.
    1 | import json
    2 | import x.json2 as json
      |        ~~~~~~~
    3 | 
    4 | numbers := {
