vlib/v/checker/tests/import_mod_as_import_alias_duplicate_err.vv
import json
import x.json2 as json

numbers := {
	'one':   1
	'two':   2
	'three': 3
	'four':  4
}

out := json.encode(numbers)
println(out)
